# morning-routine

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  SETUP.md  SHORTCUTS_SETUP.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
.github/workflows/: ci.yml
app/: _layout.tsx  index.tsx
assets/: .gitkeep
components/: HistoryCard.tsx  LockingScreen.tsx  PhotoCaptureScreen.tsx  PushupTrackingScreen.tsx  RoutineChecklist.tsx  SettingsScreen.tsx
constants/: theme.ts
services/: CalendarEmailService.ts  DateUtils.test.ts  DateUtils.ts  HistoryManager.test.ts  HistoryManager.ts  LockingService.ts  MusicService.ts  PhotoVerification.ts  PushupTracker.test.ts  PushupTracker.ts  RoutineManager.test.ts  RoutineManager.ts  SettingsManager.test.ts  SettingsManager.ts
types/: RoutineItem.ts
